$1940 ThisTab - cut off letter ends FIX

--- a/entrypoints/popup/routes/ThisTab/ThisTab.module.scss
+++ b/entrypoints/popup/routes/ThisTab/ThisTab.module.scss
@@ -756,7 +756,7 @@
           align-items: flex-start;
           display: flex;
           flex-direction: column;
-          gap: 7px 0;
+          gap: 5px 0;
           max-width: 255px;
           overflow: hidden;
           transition: max-width .3s ease-in-out;
@@ -773,7 +773,7 @@
               font-size: 14px;
               font-weight: 500;
               line-height: .86;
-              padding-bottom: 2px;
+              padding-bottom: 3px;
 
               @include m.darkMode {
                 color: v.$primary-text-dark;
@@ -789,7 +789,7 @@
               font-size: 12px;
               font-weight: 400;
               line-height: .83;
-              padding-bottom: 2px;
+              padding-bottom: 3px;
 
               &.skeleton {
                 width: 195px;
